# MX2

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  ToolChain.cmake  auto-format.sh
.gitlab/issue_templates/: bug.md
.gitlab/merge_request_templates/: default.md
BspH1/: CMakeLists.txt  STM32F103RDTx_FLASH.ld  ToolChain.cmake
BspH1/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: gd32f30x.h  gd32f30x_plug.h  stm32f103xe.h  stm32f1xx.h
BspH1/Drivers/GD32F30x_standard_peripheral/Source/: gd32f30x_ctc.c
BspH1/Drivers/SPI_SD/Inc/: mmcsd.h  mmcsd_csd.h  mmcsd_spi.h
BspH1/Drivers/SPI_SD/Src/: mmcsd_spi.c
BspH1/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_rcc.c  stm32f1xx_hal_spi.c
BspH1/EWARM/: BspH1.dep  BspH1.ewd  BspH1.ewp  BspH1.ewt  BspH1.eww  stm32f103xe_flash.icf  stm32f103xe_sram.icf
BspH1/EWARM/BspH1/Exe/: BspH1.sim
BspH1/EWARM/settings/: BspH1.wsdt  BspH1_BspH1.jlink
BspH1/Inc/: FreeRTOSConfig.h  HW_CONFIG.h  MX_LEDDigitCfg.h  Sensor.h  adc.h  dac.h  ffconf.h  gd32f30x_libopt.h  iwdg.h  main.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
BspH1/Port/: mx_console_port.c  mx_flash_port.c  mx_hand_port.c  mx_key_port.c  mx_led_digi_port.cpp  mx_mux_port.c  mx_pm_port.c  mx_tf_port.c
BspH1/Src/: adc.c  dac.c  dma.c  freertos.c  gpio.c  iwdg.c  main.c  sensor.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c  system_stm32f1xx.c  tim.c  user_diskio.c
BspH1/TestCase/: test_mux.c
CMakeToolChain/: toolchain.cmake
MX/: CMakeLists.txt  MX.h  MX_def.h  MX_defaultPort.c  cPlusMalloc.cpp  debug.h  enum.hpp  fatfs_ultis.h  path.h
MX/AUDIO/: audio.c  audio.cpp  audio.h  audio_defaultPort.c
MX/Console/: CLI.c  CLI.h  console.c  console.cpp  console.h  cpu_utils.c
MX/Hand/: hand.c  hand.cpp  hand.h  hand_port.c
MX/Inc/: AF.h  Audio.h  DEBUG.h  LED.h  Lis3D.h  MX-file.h  MX_osID.h  NEO-LED.h  PWM-led.h  SimpleLED.h  USR_CONFIG.h  mx-adc.h  mx-audio.h  mx-config.h  mx-gpio.h  mx-led.h  mx-spi.h  mx-tim.h  path.h
MX/KEY/: key.c  key.cpp  key.h
MX/LED/: LED.c  LED.cpp  LED.h  LED_NP.cpp  LED_NP.h  LED_NP_HAL.h  LED_NP_HAL_port.c  LED_NP_defaultPort.cpp  LED_PWM.c  LED_PWM.cpp  LED_PWM.h  LED_def.h
MX/LED/CXXPort/: color.hpp  flame.hpp  iBlade.cpp  iBlade.h  iBlade_ll.hpp  iBlade_sets.hpp  iBlade_ulti.hpp  randomWave.hpp
MX/LOOP/: LOOP.c  LOOP.cpp  LOOP.h
MX/MUX/: mux-def.h  mux.c  mux.h  mux_convert_internal.h  mux_convert_internal_dac.c  mux_convert_internal_dac.h  mux_defaultPort.c  mux_fileobj.h  mux_fileobj_fatfs.c  mux_fileobj_fatfs.h  mux_wavops.c  mux_wavops.h
MX/PARAM/: AF.h  PARAM_def.h  USR_CONFIG.c  USR_CONFIG.cpp  USR_CONFIG.h  colorMatrix.h  event.cpp  event.h  flashParam.cpp  flashParam.h  hash.hpp  param.c  param.cpp  param.h  path.h  re.c  re.h  triggerPath.c  triggerPath.cpp  triggerPath.h  triggerSets.c  triggerSets.cpp  triggerSets.h
MX/PM/: pm.c  pm.cpp  pm.h
MX/SimpleLED/: SimpleLED.c  SimpleLED.cpp  SimpleLED.h
MX/Src/: Audio.c  LED.c  Lis3D.c  MX-file.c  MainTask.c  NEO-LED.c  PWM-led.c  SimpleLED.c  USR_CONFIG.c  mx-audio.c  mx-led.c
MX2_AP_EB/: MX2_AP_EB.depend  MX2_AP_EB.ebp  MX2_AP_EB.elay
MX2_AudioPlayer/: MX2_AudioPlayer.ioc  MX2_AudioPlayer.txt
MX2_AudioPlayer/Drivers/LED/: LED.c  LED.h  LED_NP.c  LED_NP.cpp  LED_NP.h  LED_NP_HAL_port.c  LED_NP_port.c  LED_PWM.h  LED_def.h
MX2_AudioPlayer/Drivers/LED/CXXPort/: iBlade.h
MX2_AudioPlayer/Drivers/LED_PWM/: LED_PWM.c  LED_PWM.h
MX2_AudioPlayer/Drivers/Np_Drv/inc/: drv.h  lednp_hal.h
MX2_AudioPlayer/Drivers/Np_Drv/src/: drv.c  lednp_hal.c
MX2_AudioPlayer/Inc/: Audio.h  DEBUG.h  FreeRTOSConfig.h  LED.h  SimpleLED.h  USR_CONFIG.h  bsp_driver_sd.h  dac.h  ffconf.h  main.h  neopixel-drive.h  sdio.h  spi.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
MX2_AudioPlayer/Src/: Audio.c  LED.c  Lis3D.c  MainTask.c  SimpleLED.c  USR_CONFIG.c  adc.c  bsp_driver_sd.c  dac.c  dma.c  elog_port.c  freertos.c  gpio.c  main.c  neopixel-drive.c  sdio.c  spi.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c  tim.c
NGLSC/: Makefile  NGSLC.ioc  STM32F103RDTx_FLASH.ld
NGLSC/Inc/: FreeRTOSConfig.h  ffconf.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
NGLSC/Src/: adc.c  bsp_driver_sd.c  dac.c  dma.c  elog_port.c  freertos.c  gpio.c  main.c  sdio.c  spi.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c  tim.c  usart.c
NGLSC_EB/: NGLSC_EB.depend  NGLSC_EB.ebp  NGLSC_EB.elay  STM32F103xx.svd
NGSLC/: .mxproject  Makefile  NGSLC.ioc
NGSLC/Inc/: bsp_driver_sd.h  main.h  tim.h
NGSLC/Src/: dac.c  dma.c  gpio.c  main.c  spi.c  tim.c
Utilities/: COLORMATRIX.txt  LEDCFG.txt  Neopixel_文件结构图.eddx  SETTING.txt  功能说明.md
Utilities/Bank1/: Accent.txt  effect.txt
Utilities/Bank1/Blaster/: D01.bg  DD.bg
Utilities/Bank1/Hum/: dft.bg
Utilities/Bank1/Lockup/: dft.tg
Utilities/Bank2/: Accent.txt  effect.txt
Utilities/Bank3/: Accent.txt  effect.txt
defaultBSP/: CMakeLists.txt  MX2_AudioPlayer.ioc  STM32F103RDTx_FLASH.ld  ToolChain.cmake
defaultBSP/Inc/: Lis3D.h
defaultBSP/Port/: mx_audio_port.c  mx_hand_port.c  mx_key_port.c  mx_mux_port.c  mx_pm_port.c  mx_simpleLED_port.c
defaultBSP/Src/: adc.c  dma.c  freertos.c  gpio.c  main.c  stm32f1xx_it.c  tim.c
easylogger/inc/: elog.h  elog_cfg.h
easylogger/src/: elog.c
gcctools/: jlink-openocd.cfg
neopixel/Inc/: neopixel-drive.h
neopixel/Src/: neopixel-drive.c
